fix hide arrow of input number on firefox in mode readonly

--- a/front/cc-master/src/app/pages/offers/components/editable-price-grid/editable-price-cell/editable-price-cell.component.scss
+++ b/front/cc-master/src/app/pages/offers/components/editable-price-grid/editable-price-cell/editable-price-cell.component.scss
@@ -22,4 +22,9 @@
   pointer-events: none;
   background-color: white;
   color: _color('grey', 800);
+
+  /* Firefox - hidden input number arrow */
+  &[type=number] {
+    -moz-appearance: textfield;
+  }
 }
